objects/Veeva_Contact_Affiliation__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Veeva Contact Affiliations</relationshipLabel>
        <relationshipName>Veeva_Contact_Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Veeva Contact Affiliations</relationshipLabel>
        <relationshipName>Veeva_Contact_Affiliations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Entity_Type__c</fullName>
        <label>Entity Type</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Entity_VID__c</fullName>
        <label>Entity VID</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hierarchy_Type__c</fullName>
        <label>Hierarchy Type</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_HCO_Status__c</fullName>
        <label>Parent HCO Status</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_HCO_VID__c</fullName>
        <label>Parent HCO VID</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Relationship_Type__c</fullName>
        <label>Relationship Type</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Veeva_ID__c</fullName>
        <externalId>true</externalId>
        <label>Veeva ID</label>
        <length>155</length>
        <type>Text</type>
    </fields>
    <label>Veeva Contact Affiliation</label>
    <nameField>
        <displayFormat>VCA-{0000}</displayFormat>
        <label>Veeva Contact Affiliation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Veeva Contact Affiliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Contact_or_Account_is_Required</fullName>
        <active>true</active>
        <errorConditionFormula>IF(OR(ISBLANK(Account__c),ISBLANK(Contact__c)), true, false)</errorConditionFormula>
        <errorMessage>Please select account and contact while creating affiliation</errorMessage>
    </validationRules>
</CustomObject>